--- a/azure-pipelines-backend.yml
+++ b/azure-pipelines-backend.yml
@@ -12,17 +12,22 @@ trigger:
     - backend/*
     - azure-pipelines.yml
 
-pool:
-  vmImage: ubuntu-latest
+stages:
+- stage: BuildPayrollBackend
+  jobs:
+  - job: BuildPayrollBackend
+    displayName: Build Payroll Backend with Maven
+    pool:
+      vmImage: ubuntu-latest
 
-steps:
-  - task: Maven@3
-    inputs:
-      mavenPomFile: 'backend/pom.xml'
-      mavenOptions: '-Xmx3072m'
-      javaHomeOption: 'JDKVersion'
-      jdkVersionOption: '1.11'
-      jdkArchitectureOption: 'x64'
-      publishJUnitResults: true
-      testResultsFiles: '**/surefire-reports/TEST-*.xml'
-      goals: 'package'
+    steps:
+      - task: Maven@3
+        inputs:
+          mavenPomFile: 'backend/pom.xml'
+          mavenOptions: '-Xmx3072m'
+          javaHomeOption: 'JDKVersion'
+          jdkVersionOption: '1.11'
+          jdkArchitectureOption: 'x64'
+          publishJUnitResults: true
+          testResultsFiles: '**/surefire-reports/TEST-*.xml'
+          goals: 'package'
