--- a/azure-pipelines-frontend.yml
+++ b/azure-pipelines-frontend.yml
@@ -4,16 +4,31 @@
 # https://aka.ms/yaml
 
 trigger:
-- main
+  branches:
+    include:
+    - main
+  paths:
+    include:
+    - frontend/*
+    - azure-pipelines-frontend.yml
 
 pool:
   vmImage: ubuntu-latest
 
-steps:
-- script: echo Hello, world!
-  displayName: 'Run a one-line script'
+stages:
+- stage: - stage: BuildPayrollFrontend
+  displayName: 'Build'
+  jobs:
+  - job: build_test
+    displayName: 'Build and test'
+    steps:
+    - task: NodeTool@0
+      inputs:
+        versionSpec: '10.x'
+      displayName: 'Install Node.js'
+    - script: |
+        npm install
+        npm run build
+        npm run test
+      displayName: 'npm install, build, and test'
 
-- script: |
-    echo Add other tasks to build, test, and deploy your project.
-    echo See https://aka.ms/yaml
-  displayName: 'Run a multi-line script'
