--- a/azure-pipelines-frontend.yml
+++ b/azure-pipelines-frontend.yml
@@ -16,7 +16,7 @@ pool:
   vmImage: ubuntu-latest
 
 stages:
-- stage: - stage: BuildPayrollFrontend
+- stage: BuildPayrollFrontend
   displayName: 'Build'
   jobs:
   - job: build_test
