--- a/azure-pipelines-frontend.yml
+++ b/azure-pipelines-frontend.yml
@@ -25,9 +25,9 @@ stages:
     - task: NodeTool@0
       inputs:
         versionSpec: '10.x'
+        workingDir: /frontend
       displayName: 'Install Node.js'
-    - script: 
-      workingDirectory: '$(System.DefaultWorkingDirectory)/frontend' |
+    - script: |      
         npm install
         npm run build
         npm run test
