--- a/azure-pipelines-frontend.yml
+++ b/azure-pipelines-frontend.yml
@@ -25,11 +25,14 @@ stages:
     - task: NodeTool@0
       inputs:
         versionSpec: '10.x'
-      displayName: 'Install Node.js'
-    - script: |      
-        npm install
-        npm run build
-        npm run test
       workingDirectory: '$(Build.SourcesDirectory)/frontend'
       displayName: 'npm install, build, and test'
 
+    - script: npm install
+      displayName: "Install NPM"
+
+    - script: npm run build
+      displayName: "Build"
+
+    - script: npm test -- --watchAll=false
+      displayName: "Test"
