change working directory location

--- a/azure-pipelines-frontend.yml
+++ b/azure-pipelines-frontend.yml
@@ -25,15 +25,15 @@ stages:
     - task: NodeTool@0
       inputs:
         versionSpec: '10.x'
-      workingDirectory: '$(Build.SourcesDirectory)/frontend'
       displayName: 'npm install, build, and test'
 
     - script: |
-      npm install
-      npm run build
-    displayName: 'npm install and build'
+        npm install
+        npm run build
+      displayName: 'npm install and build'
+      workingDirectory: '$(Build.SourcesDirectory)/frontend'
 
     - task: CopyFiles@2
       inputs:
-        Contents: 'build/**' # Pull the build directory (React)
+        Contents: 'node_modules/**' # Pull the build directory (React)
         TargetFolder: '$(Build.ArtifactStagingDirectory)'
