remove display message from yaml

--- a/azure-pipelines-frontend.yml
+++ b/azure-pipelines-frontend.yml
@@ -25,11 +25,10 @@ stages:
     - task: NodeTool@0
       inputs:
         versionSpec: '10.x'
-      displayName: 'npm install, build, and test'
-
+        
     - script: |
         npm install
-        npm run build
+        npm run
       displayName: 'npm install and build'
       workingDirectory: '$(Build.SourcesDirectory)/frontend'
 
