add npm run-script

--- a/azure-pipelines-frontend.yml
+++ b/azure-pipelines-frontend.yml
@@ -25,10 +25,10 @@ stages:
     - task: NodeTool@0
       inputs:
         versionSpec: '10.x'
-        
+
     - script: |
         npm install
-        npm run
+        npm run-script
       displayName: 'npm install and build'
       workingDirectory: '$(Build.SourcesDirectory)/frontend'
 
