--- a/frontend/package.json
+++ b/frontend/package.json
@@ -27,7 +27,11 @@
     "stompjs": "^2.3.3"
   },
   "scripts": {
-    "watch": "webpack --watch -d --output ./target/classes/static/built/bundle.js"
+    "watch": "webpack --watch -d --output ./target/classes/static/built/bundle.js",
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "ci:unit": "npm run test -- --watchAll=false"
   },
   "devDependencies": {
     "@babel/core": "^7.1.0",
