--- a/azure-pipelines-frontend.yml
+++ b/azure-pipelines-frontend.yml
@@ -25,10 +25,19 @@ stages:
     - task: NodeTool@0
       inputs:
         versionSpec: '10.x'
-
-    - script: |
-        npm install
-        npm run build
-        npm run test
-      displayName: 'npm install and build'
-      workingDirectory: '$(Build.SourcesDirectory)/frontend'
+#      workingDirectory: '$(Build.SourcesDirectory)/frontend'
+    - task: Npm@0
+      displayName: Install application dependencies
+      inputs:
+        arguments: --force
+    - task: Npm@1
+      displayName: npm run test
+      inputs:
+        command: custom
+        customCommand: run ci:unit
+    - task: Npm@1
+      displayName: npm build
+      inputs:
+        command: custom
+        verbose: false
+        customCommand: run build
