--- a/frontend/package.json
+++ b/frontend/package.json
@@ -27,11 +27,7 @@
     "stompjs": "^2.3.3"
   },
   "scripts": {
-    "watch": "webpack --watch -d --output ./target/classes/static/built/bundle.js",
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "ci:unit": "npm run test -- --watchAll=false"
+    "watch": "webpack --watch -d --output ./target/classes/static/built/bundle.js"
   },
   "devDependencies": {
     "@babel/core": "^7.1.0",
