update for node build

--- a/azure-pipelines-frontend.yml
+++ b/azure-pipelines-frontend.yml
@@ -28,7 +28,7 @@ stages:
 
     - script: |
         npm install
-        npm start
+        npm run build
       displayName: 'npm install and build'
       workingDirectory: '$(Build.SourcesDirectory)/frontend'
 
