change frontend docker image creation

--- a/azure-pipelines-frontend.yml
+++ b/azure-pipelines-frontend.yml
@@ -49,3 +49,4 @@ stages:
           containerRegistry: 'lakpriyagk-docker-hub-service-connection'
           repository: 'lakpriyagk/contoso-payroll-frontend'
           tags: '$(Build.BuildId)'
+          Dockerfile: frontend/Dockerfile
