change frontend docker image creation

--- a/azure-pipelines-backend.yml
+++ b/azure-pipelines-backend.yml
@@ -4,7 +4,7 @@
 # https://aka.ms/yaml
 
 variables:
-  SERVICE_CONNECTION: 'lakpriyagk-docker-hub-service-connection'
+  SERVICE_CONNECTION: lakpriyagk-docker-hub-service-connection
 
 trigger:
   branches:
