--- a/infrastucture/azure-pipelines-infra.yml
+++ b/infrastucture/azure-pipelines-infra.yml
@@ -31,6 +31,7 @@ stages:
   jobs:
   - deployment: Deploy 
     displayName: 'Create Resource Group'
+    environment: 'development'
     strategy:
       runOnce:
         deploy: 
