--- a/infrastucture/docker-compose-payroll.yml
+++ b/infrastucture/docker-compose-payroll.yml
@@ -1,13 +1,13 @@
 version: "3"
 services:
   backend:
-    image: "lakpriyagk/contoso-payroll-backend"
+    image: "lakpriyagk/contoso-payroll-backend:34"
     container_name: "backend"
     ports:
       - "8080:8080"
 
   frontend:
-    image: "lakpriyagk/contoso-payroll-frontend"
+    image: "lakpriyagk/contoso-payroll-frontend:56"
     container_name: "frontend"
     ports:
       - "80:80"
