--- a/infrastucture/azure-pipelines-infra.yml
+++ b/infrastucture/azure-pipelines-infra.yml
@@ -56,6 +56,6 @@ stages:
         azureSubscription: $(SERVICE_CONNECTION)
         scriptType: ps
         scriptLocation: inlineScript
-        workingDirectory: $(System.DefaultWorkingDirectory)/infrastructure
+        workingDirectory: $(Build.SourcesDirectory)/infrastucture
         inlineScript: |
           az webapp create --resource-group $(RESOURCEGROUP_NAME) --plan $(APP_SERV_PLAN) --name $(APP_NAME) --multicontainer-config-type compose --multicontainer-config-file docker-compose-payroll.yml
