--- a/infrastucture/azure-pipelines-infra.yml
+++ b/infrastucture/azure-pipelines-infra.yml
@@ -28,67 +28,67 @@ pool:
   vmImage: ubuntu-latest
 
 stages:
-#- stage: DeployAppServicePlan
-#  jobs:
-  # - job: DeployAppServicePlan 
-  #   displayName: 'Deploy AppService Plan'
-  #   steps:
-  #   - task: AzureResourceGroupDeployment@2
-  #     inputs:
-  #       azureSubscription: $(SERVICE_CONNECTION)
-  #       action: 'Create Or Update Resource Group'
-  #       resourceGroupName: '$(RESOURCEGROUP_NAME)'
-  #       location: $(LOCATION)
-  #       deploymentMode: 'Incremental'
-  #       templateLocation : 'URL of the file'
-  #       csmFileLink: 'https://raw.githubusercontent.com/lakpj/contoso-payroll/infra-pipeline/infrastucture/AppServicePlan/azuredeploy.json'
-- stage: DeployLogAnalyticsWorkspace 
-  jobs: 
-  - job: DeployLogAnalyticsWorkspace 
-    displayName: 'Deploy LogAnalytics Workspace'
-    steps:
-    - task: AzureResourceGroupDeployment@2
-      inputs:
-        azureSubscription: $(SERVICE_CONNECTION)
-        action: 'Create Or Update Resource Group'
-        resourceGroupName: '$(RESOURCEGROUP_NAME)'
-        location: $(LOCATION)
-        deploymentMode: 'Incremental'
-        templateLocation : 'URL of the file'
-        csmFileLink: 'https://github.com/lakpj/contoso-payroll/blob/infra-pipeline/infrastucture/LogAnalyticsWorkspace/azuredeploy.json'
-        deploymentName: 'DeployLogAnalytics'
-# - stage: DeployWebappToServicePlan 
-#   dependsOn:
-#   - DeployPayrollBaseInfrastructure
-#   condition: succeeded('DeployPayrollBaseInfrastructure')
-#   jobs:  
-#   - job: DeployWebappToServicePlan 
-#     displayName: 'Deploy Webapp To Application Service Plan'
+- stage: DeployAppServicePlan
+  jobs:
+   - job: DeployAppServicePlan 
+     displayName: 'Deploy AppService Plan'
+     steps:
+     - task: AzureResourceGroupDeployment@2
+       inputs:
+         azureSubscription: $(SERVICE_CONNECTION)
+         action: 'Create Or Update Resource Group'
+         resourceGroupName: '$(RESOURCEGROUP_NAME)'
+         location: $(LOCATION)
+         deploymentMode: 'Incremental'
+         templateLocation : 'URL of the file'
+         csmFileLink: 'https://raw.githubusercontent.com/lakpj/contoso-payroll/infra-pipeline/infrastucture/AppServicePlan/azuredeploy.json'
+# - stage: DeployLogAnalyticsWorkspace 
+#   jobs: 
+#   - job: DeployLogAnalyticsWorkspace 
+#     displayName: 'Deploy LogAnalytics Workspace'
 #     steps:
-#     - task: AzureCLI@2
+#     - task: AzureResourceGroupDeployment@2
 #       inputs:
 #         azureSubscription: $(SERVICE_CONNECTION)
-#         scriptType: ps
-#         scriptLocation: inlineScript
-#         workingDirectory: $(Build.SourcesDirectory)/infrastucture
-#         inlineScript: |
-#           az webapp create --resource-group $(RESOURCEGROUP_NAME) --plan $(APP_SERV_PLAN) --name $(APP_NAME) --multicontainer-config-type compose --multicontainer-config-file docker-compose-payroll.yml
-# - stage: EnableMonitoringToWebapp 
-#   dependsOn:
-#   - DeployWebappToServicePlan
-#   condition: succeeded('DeployWebappToServicePlan')
-#   jobs:
-#   - job: EnableMonitoring 
-#     displayName: 'Enable Monitoring To Webapp'
-#     steps:
-#     - task: AzureResourceManagerTemplateDeployment@3
-#       inputs:
-#         azureResourceManagerConnection: $(SERVICE_CONNECTION)
 #         action: 'Create Or Update Resource Group'
 #         resourceGroupName: '$(RESOURCEGROUP_NAME)'
 #         location: $(LOCATION)
 #         deploymentMode: 'Incremental'
 #         templateLocation : 'URL of the file'
-#         csmFileLink: 'https://raw.githubusercontent.com/lakpj/contoso-payroll/infra-pipeline/infrastucture/AppMonitoring/azuredeploy.json'
-#         deploymentScope: 'Resource Group'    
-#         deploymentName: 'DeployMonitoring'
+#         csmFileLink: 'https://github.com/lakpj/contoso-payroll/blob/infra-pipeline/infrastucture/LogAnalyticsWorkspace/azuredeploy.json'
+#         deploymentName: 'DeployLogAnalytics'
+- stage: DeployWebappToServicePlan 
+  dependsOn:
+  - DeployPayrollBaseInfrastructure
+  condition: succeeded('DeployPayrollBaseInfrastructure')
+  jobs:  
+  - job: DeployWebappToServicePlan 
+    displayName: 'Deploy Webapp To Application Service Plan'
+    steps:
+    - task: AzureCLI@2
+      inputs:
+        azureSubscription: $(SERVICE_CONNECTION)
+        scriptType: ps
+        scriptLocation: inlineScript
+        workingDirectory: $(Build.SourcesDirectory)/infrastucture
+        inlineScript: |
+          az webapp create --resource-group $(RESOURCEGROUP_NAME) --plan $(APP_SERV_PLAN) --name $(APP_NAME) --multicontainer-config-type compose --multicontainer-config-file docker-compose-payroll.yml
+- stage: EnableMonitoringToWebapp 
+  dependsOn:
+  - DeployWebappToServicePlan
+  condition: succeeded('DeployWebappToServicePlan')
+  jobs:
+  - job: EnableMonitoring 
+    displayName: 'Enable Monitoring To Webapp'
+    steps:
+    - task: AzureResourceManagerTemplateDeployment@3
+      inputs:
+        azureResourceManagerConnection: $(SERVICE_CONNECTION)
+        action: 'Create Or Update Resource Group'
+        resourceGroupName: '$(RESOURCEGROUP_NAME)'
+        location: $(LOCATION)
+        deploymentMode: 'Incremental'
+        templateLocation : 'URL of the file'
+        csmFileLink: 'https://raw.githubusercontent.com/lakpj/contoso-payroll/infra-pipeline/infrastucture/AppMonitoring/azuredeploy.json'
+        deploymentScope: 'Resource Group'    
+        deploymentName: 'DeployMonitoring'
