--- a/infrastucture/azure-pipelines-infra.yml
+++ b/infrastucture/azure-pipelines-infra.yml
@@ -61,8 +61,8 @@ stages:
 #         deploymentName: 'DeployLogAnalytics'
 - stage: DeployWebappToServicePlan 
   dependsOn:
-  - DeployPayrollBaseInfrastructure
-  condition: succeeded('DeployPayrollBaseInfrastructure')
+  - DeployAppServicePlan
+  condition: succeeded('DeployAppServicePlan')
   jobs:  
   - job: DeployWebappToServicePlan 
     displayName: 'Deploy Webapp To Application Service Plan'
