change agent pool to windows

--- a/infrastucture/azure-pipelines-infra.yml
+++ b/infrastucture/azure-pipelines-infra.yml
@@ -25,7 +25,7 @@ trigger:
     - azure-pipelines-infra.yml
 
 pool:
-  vmImage: ubuntu-latest
+  vmImage: windows-latest
 
 stages:
 - stage: DeployAppServicePlan
@@ -44,21 +44,21 @@ stages:
          csmFileLink: 'https://raw.githubusercontent.com/lakpj/contoso-payroll/infra-pipeline/infrastucture/AppServicePlan/azuredeploy.json'
          csmParametersFileLink: 'https://raw.githubusercontent.com/lakpj/contoso-payroll/infra-pipeline/infrastucture/AppServicePlan/azuredeploy.parameters.json'
          deploymentName: 'DeployAppService'
-- stage: DeployLogAnalyticsWorkspace 
-  jobs: 
-  - job: DeployLogAnalyticsWorkspace 
-    displayName: 'Deploy LogAnalytics Workspace'
-    steps:
-    - task: AzureResourceGroupDeployment@2
-      inputs:
-        azureSubscription: $(SERVICE_CONNECTION)
-        action: 'Create Or Update Resource Group'
-        resourceGroupName: '$(RESOURCEGROUP_NAME)'
-        location: $(LOCATION)
-        deploymentMode: 'Incremental'
-        templateLocation : 'URL of the file'
-        csmFileLink: 'https://github.com/lakpj/contoso-payroll/blob/infra-pipeline/infrastucture/LogAnalyticsWorkspace/azuredeploy.json'
-        deploymentName: 'DeployLogAnalytics'
+# - stage: DeployLogAnalyticsWorkspace 
+#   jobs: 
+#   - job: DeployLogAnalyticsWorkspace 
+#     displayName: 'Deploy LogAnalytics Workspace'
+#     steps:
+#     - task: AzureResourceGroupDeployment@2
+#       inputs:
+#         azureSubscription: $(SERVICE_CONNECTION)
+#         action: 'Create Or Update Resource Group'
+#         resourceGroupName: '$(RESOURCEGROUP_NAME)'
+#         location: $(LOCATION)
+#         deploymentMode: 'Incremental'
+#         templateLocation : 'URL of the file'
+#         csmFileLink: 'https://github.com/lakpj/contoso-payroll/blob/infra-pipeline/infrastucture/LogAnalyticsWorkspace/azuredeploy.json'
+#         deploymentName: 'DeployLogAnalytics'
 - stage: DeployWebappToServicePlan 
   dependsOn:
   - DeployAppServicePlan
