--- a/infrastucture/azure-pipelines-infra.yml
+++ b/infrastucture/azure-pipelines-infra.yml
@@ -3,17 +3,113 @@
 # Add steps that build, run tests, deploy, and more:
 # https://aka.ms/yaml
 
+parameters:
+- name: ResourceGroupName
+  displayName: Resource Group Name
+  type: string
+
+variables:
+  SERVICE_CONNECTION: lakpriyagk-arm-subscription-service-connection-1
+  RESOURCEGROUP_NAME: '${{ parameters.ResourceGroupName }}'
+  LOCATION: 'westeurope'
+  APP_SERV_PLAN: 'payroll-app-serv-plan'
+  APP_NAME: 'contoso-payroll-webapp'
+
 trigger:
-- main
+  branches:
+    include:
+    - main
+  paths:
+    include:
+    - infrastucture/*
+    - azure-pipelines-infra.yml
 
 pool:
-  vmImage: ubuntu-latest
+  vmImage: windows-latest
 
-steps:
-- script: echo Hello, world!
-  displayName: 'Run a one-line script'
-
-- script: |
-    echo Add other tasks to build, test, and deploy your project.
-    echo See https://aka.ms/yaml
-  displayName: 'Run a multi-line script'
+stages:
+# - stage: DeployAppServicePlan
+#   jobs:
+#    - job: DeployAppServicePlan 
+#      displayName: 'Deploy AppService Plan'
+#      steps:
+#      - task: AzureResourceGroupDeployment@2
+#        inputs:
+#          azureSubscription: $(SERVICE_CONNECTION)
+#          action: 'Create Or Update Resource Group'
+#          resourceGroupName: '$(RESOURCEGROUP_NAME)'
+#          location: $(LOCATION)
+#          deploymentMode: 'Incremental'
+#          templateLocation : 'URL of the file'
+#          csmFileLink: 'https://raw.githubusercontent.com/lakpj/contoso-payroll/infra-pipeline/infrastucture/AppServicePlan/azuredeploy.json'
+#          csmParametersFileLink: 'https://raw.githubusercontent.com/lakpj/contoso-payroll/infra-pipeline/infrastucture/AppServicePlan/azuredeploy.parameters.json'
+#          deploymentName: 'DeployAppService'
+# - stage: DeployLogAnalyticsWorkspace 
+#   jobs: 
+#   - job: DeployLogAnalyticsWorkspace 
+#     displayName: 'Deploy LogAnalytics Workspace'
+#     steps:
+#     - task: AzureResourceGroupDeployment@2
+#       inputs:
+#         azureSubscription: $(SERVICE_CONNECTION)
+#         action: 'Create Or Update Resource Group'
+#         resourceGroupName: '$(RESOURCEGROUP_NAME)'
+#         location: $(LOCATION)
+#         deploymentMode: 'Incremental'
+#         templateLocation : 'URL of the file'
+#         csmFileLink: 'https://github.com/lakpj/contoso-payroll/blob/infra-pipeline/infrastucture/LogAnalyticsWorkspace/azuredeploy.json'
+#         deploymentName: 'DeployLogAnalytics'
+- stage: DeployWebappToServicePlan 
+  # dependsOn:
+  # - DeployAppServicePlan
+  # condition: succeeded('DeployAppServicePlan')
+  jobs:  
+  - job: DeployWebapp 
+    displayName: 'Deploy Webapp To Application Service Plan'
+    steps:
+    - task: AzureCLI@2
+      inputs:
+        azureSubscription: $(SERVICE_CONNECTION)
+        scriptType: ps
+        scriptLocation: inlineScript
+        workingDirectory: $(Build.SourcesDirectory)/infrastucture
+        inlineScript: |
+          az webapp create --resource-group $(RESOURCEGROUP_NAME) --plan $(APP_SERV_PLAN) --name $(APP_NAME) --multicontainer-config-type compose --multicontainer-config-file docker-compose-payroll.yml
+  - job: ConfigWebappInServicePlan
+    dependsOn:
+    - DeployWebapp
+    condition: succeeded('DeployWebapp') 
+    displayName: 'Config Webapp In Service Plan'
+    steps:    
+    - task: AzureResourceManagerTemplateDeployment@3
+      inputs:
+        azureResourceManagerConnection: $(SERVICE_CONNECTION)
+        action: 'Create Or Update Resource Group'
+        resourceGroupName: '$(RESOURCEGROUP_NAME)'
+        location: $(LOCATION)
+        deploymentMode: 'Incremental'
+        templateLocation : 'URL of the file'
+        csmFileLink: 'https://raw.githubusercontent.com/lakpj/contoso-payroll/infra-pipeline/infrastucture/AppConfig/azuredeploy.json'
+        csmParametersFileLink: 'https://raw.githubusercontent.com/lakpj/contoso-payroll/infra-pipeline/infrastucture/AppConfig/azuredeploy.parameters.json'
+        deploymentScope: 'Resource Group'    
+        deploymentName: 'ConfigWebapp'
+- stage: EnableMonitoringToWebapp 
+  dependsOn:
+  - DeployWebappToServicePlan
+  condition: succeeded('DeployWebappToServicePlan')
+  jobs:
+  - job: EnableMonitoring 
+    displayName: 'Enable Monitoring To Webapp'
+    steps:
+    - task: AzureResourceManagerTemplateDeployment@3
+      inputs:
+        azureResourceManagerConnection: $(SERVICE_CONNECTION)
+        action: 'Create Or Update Resource Group'
+        resourceGroupName: '$(RESOURCEGROUP_NAME)'
+        location: $(LOCATION)
+        deploymentMode: 'Incremental'
+        templateLocation : 'URL of the file'
+        csmFileLink: 'https://raw.githubusercontent.com/lakpj/contoso-payroll/infra-pipeline/infrastucture/AppMonitoring/azuredeploy.json'
+        csmParametersFileLink: 'https://raw.githubusercontent.com/lakpj/contoso-payroll/infra-pipeline/infrastucture/AppMonitoring/azuredeploy.parameters.json'
+        deploymentScope: 'Resource Group'    
+        deploymentName: 'DeployMonitoring'
